# smart-budget-tracker

./: README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/smart_budget_tracker_backend/: database.py  main.py  models.py
frontend/: README.md
infra/: docker-compose.yml
