[tool.poetry]
name = "smart-budget-tracker"
version = "0.1.0"
description = "Smart Budget Tracker backend service"
authors = ["Elly <ellybwire31@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0"
alembic = "^1.13"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
